syntax = "proto3";

import "primitives/transactions.proto";
import "call-contract.proto";

message SendTransactionInput {
  Transaction transaction = 1;
  TransactionSubscriptionAppendix transactionSubscriptionAppendix = 2;
}

message SendTransactionOutput {
}

service PublicApi {
  rpc SendTransaction (SendTransactionInput) returns (SendTransactionOutput);
  rpc CallContract (CallContractInput) returns (CallContractOutput);
}
