syntax = "proto3";

import "primitives/transactions.proto";
import "primitives/gossip-listener.proto";

service TransactionPool {
  rpc AddNewPendingTransaction (AddNewPendingTransactionInput) returns (AddNewPendingTransactionOutput);
  rpc GetAllPendingTransactions (GetAllPendingTransactionsInput) returns (GetAllPendingTransactionsOutput);
  rpc MarkCommittedTransactions (MarkCommittedTransactionsInput) returns (MarkCommittedTransactionsOutput);
  rpc GossipMessageReceived (GossipListenerInput) returns (GossipListenerOutput);
}

message CommittedTransactionEntry {
  bytes txHash = 1;
  uint64 timestamp = 2;
}

message NewTransactionBroadcastMessage {
  Transaction transaction = 1;
}

message AddNewPendingTransactionInput {
  Transaction transaction = 1;
}

message AddNewPendingTransactionOutput {
  // empty
}

message GetAllPendingTransactionsInput {
}

message GetAllPendingTransactionsOutput {
  repeated TransactionEntry transactionEntries = 1;
}

message MarkCommittedTransactionsInput {
  repeated CommittedTransactionEntry transactionEntries  = 1;
}

message MarkCommittedTransactionsOutput {
}
